# PROVE

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml  test_jd.txt
infra/: providers.tf  variables.tf
scripts/: backfill_demonstrates.py  db-backup.sh  db-restore.sh  ingest_remaining.py  migrate_skills.py  migrate_taxonomy.py  reembed.py  scrub_secrets.py  seed_repo_metadata.py
src/: app.py
src/config/: settings.py
src/core/: __init__.py  haiku_client.py  neo4j_client.py  nim_client.py  voyage_client.py
src/ingestion/: __init__.py  cli.py  code_parser.py  git_dates.py  graph_builder.py  resume_parser.py  retag_skills.py  skill_classifier.py  skill_extractor.py  skill_keywords.py  skill_taxonomy.py
src/jd_match/: extract.py  matcher.py
src/qa/: agent.py  tools.py
src/static/: chat.js  graph.js  jd.js  repo-tiles.js  repo-tiles.min.js  style.css  style.min.css
src/templates/: index.html  skill.html
src/ui/: competency_map.py
tests/: conftest.py  test_app.py  test_ingestion.py  test_jd_match.py  test_qa.py
tests/e2e/: conftest.py  test_cross_browser.py  test_iphone15_safari.py  test_mobile_layout.py
